Change link color

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -3,12 +3,12 @@
 /*************************************************************************/
 
 a {
-  color: $color-orange;
+  color: $color-blue;
   text-decoration: none;
 }
 
 a:visited {
-  color: $color-orange-dark;
+  color: $color-blue-darker;
 }
 
 a:hover {
