Fix metda description

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,7 @@
 <nav id="main_nav">
     <ul>
-        <li><a class="logo" href="{{ site.baseurl }}/index.html"><span class="name">{{ site.title}}</span></a>
+        <li><a class="logo" href="{{ site.baseurl }}/index.html"><span class="name">DG
+        </span>blog</a>
         {% for link in site.data.nav %}
         <li><a class="fancy_nav" href="{{ site.baseurl }}{{ link.link }}">{{ link.name }}</a></li>
         {% endfor %}
