--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,8 @@
         {{ site.title }}
         {% endif%}
     </title>
-    {% if page.seo["description"] %}
-    <meta name="description" content="{{ page.seo['description'] }}"/>
+    {% if page.seo%}
+    <meta name="description" content="{{ page.seo }}"/>
     {% endif %}
     <meta name="viewport" content="device=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="{{ site.baseurl }}/resources/css/main.css"/>
