--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,8 +2,9 @@
     <ul>
         <li><a class="logo" href="{{ site.baseurl }}/index.html"><span class="name">DG
         </span>blog</a>
-        {% for link in site.data.nav %}
-        <li><a class="fancy_nav" href="{{ site.baseurl }}{{ link.link }}">{{ link.name }}</a></li>
+        <li><a class="fancy_nav" href="{{ site.baseurl }}/index.html">Home</a></li>
+        {% for link in site.categories %}
+        <li><a class="fancy_nav" href="{{ site.baseurl }}/categories/{{ link | first }}">{{ link | first }}</a></li>
         {% endfor %}
     </ul>
 </nav>
