--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,31 @@
 <body>
 <div id="wrapper">
     <header>
-        {% include nav.html %}
+        <div id="content">
+            <div>
+                {% include logo.html %}
+                {% include nav.html %}
+            </div>
+            <h1>
+                {% if page.category %}
+                {{ page.category }}
+                {% else if page.tag %}
+                {{ page.tag }}
+                {% endif %}
+                {% if page.category == nil and page.tag == nil %}
+                {{ page.title }}
+                {% endif %}
+            </h1>
+            {% if page.description %}
+            <p>{{ page.description }}</p>
+            {% endif %}
+        </div>
     </header>
     <main id="start">
         {{ content }}
     </main>
+    {% include paginator.html %}
     <footer>
-        {% include paginator.html %}
         {% include footer.html %}
     </footer>
 </div>
