--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -46,8 +46,11 @@ hr {
 /*************************************************************************/
 
 body {
-  background-color: $color-white;
   color: $color-black;
+  background-image: url("/resources/images/main_front.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 
   #wrapper {
     font-family: $font-family-open-sans;
@@ -55,17 +58,86 @@ body {
     min-width: $media-query-min;
 
     > header {
-      background-color: $color-white-grey;
+      padding-top: $m-p-XXXL;
+
+      #content {
+        padding: 0 $m-p-M;
+        display: block;
+        padding-bottom: 6rem;
+        max-width: 90rem;
+        @include center-horizontally();
+
+        div:first-child {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+        }
+
+        h1 {
+          text-align: center;
+          color: $color-white;
+          font-size: 3rem;
+          margin-top: 12rem;
+          font-weight: 700;
+        }
+        p {
+          text-align: center;
+          margin-top: $m-p-M;
+          color: $color-white;
+          font-size: 1.5rem;
+        }
+
+      }
     }
 
     main {
-      max-width: $media-query-max;
+      width: 100%;
+      background-color: $color-white;
       @include center-horizontally();
-      margin-top: $m-p-XXXL;
+      padding-top: $m-p-XXXL;
+      padding-bottom: $m-p-XL;
     }
 
     > footer {
       background-color: $color-black;
+      margin-top: 20rem;
+      position: relative;
+
+      blockquote {
+        display: block;
+        position: absolute;
+        line-height: 150%;
+        top: -12rem;
+        color: $color-white;
+        font-size: $f-s-XL;
+        max-width: $media-query-max;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+
+        p {
+          text-align: center;
+        }
+        p:before {
+          display: block;
+          content: "";
+          background: url("/resources/images/quotes.svg");
+          background-size: 3rem 2rem;
+          width: 3rem;
+          height: 2rem;
+          position: absolute;
+          left: 0;
+          right: 0;
+          margin: 0 auto;
+          top: -4rem;
+          font-size: 5rem;
+        }
+        footer {
+          padding-right: $m-p-M;
+          text-align: right;
+          margin-top: $m-p-M;
+        }
+      }
     }
   }
 }
