--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -8,7 +8,6 @@
   }
 }
 
-
 @media only screen and (min-width: $media-query-med-2) {
 
 }
@@ -16,13 +15,31 @@
 @media only screen and (min-width: $media-query-max) {
   body {
     font-size: 120%;
+
+    #wrapper {
+      > header {
+        #content {
+          div:first-child {
+            flex-direction: row;
+          }
+
+          h1 {
+            margin-top: 18rem;
+            text-align: left;
+          }
+          p {
+            text-align: left;
+          }
+        }
+      }
+    }
   }
   #main_nav {
     ul {
       text-align: right;
-      li:first-child {
+      li {
         display: inline-block;
-        float: left;
+        margin-left: $m-p-XL;
       }
     }
   }
