--- a/_includes/article_header.html
+++ b/_includes/article_header.html
@@ -5,5 +5,7 @@
     </time>
     <span> | </span>
     <a class="comment_count" href="{{ site.baseurl }}{{ page.url }}#disqus_thread" data-disqus-identifier="{{ page.id }}"></a>
+    <span> | </span>
+    {% include tags.html %}
 </header>
 
