--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,6 +4,7 @@
         {% for link in site.categories %}
         <li><a class="fancy_nav" href="{{ site.baseurl }}/categories/{{ link | first }}">{{ link | first }}</a></li>
         {% endfor %}
+        <li><a class="fancy_nav" href="{{ site.baseurl }}/pages/about.html">about</a></li>
     </ul>
 </nav>
 
