--- a/_sass/_include.scss
+++ b/_sass/_include.scss
@@ -88,6 +88,7 @@ article {
   }
 
   .highlighter-rouge {
+    color: $color-grey-dark;
     background-color: $color-white-grey;
     border: 1px solid $color-grey;
     padding: 0 $m-p-XXS;
