--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
         {{ site.title }}
         {% endif%}
     </title>
-    {% if page.seo%}
+    {% if page.description %}
     <meta name="description" content="{{ page.description}}"/>
     {% endif %}
     <meta name="viewport" content="device=device-width, initial-scale=1"/>
