--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,14 @@
 <head>
     <title>
         {% if page.title %}
-        {{ page.title }}
+        {{ page.title }} - {{ site.title }}
         {% else %}
         {{ site.title }}
         {% endif%}
     </title>
-    {% if page.seo%}
-    <meta name="description" content="{{ page.seo }}"/>
-    {% endif %}
+
+    {% seo title=false %}
+
     <meta name="viewport" content="device=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="{{ site.baseurl }}/resources/css/main.css"/>
     {% if jekyll.environment == 'production' %}
