--- a/main.scss
+++ b/main.scss
@@ -8,6 +8,7 @@
 @import "variables";
 @import "default";
 @import "include";
+@import "skills";
 @import "nav";
 @import "footer";
 @import "media";
