--- a/main.scss
+++ b/main.scss
@@ -8,8 +8,10 @@
 @import "variables";
 @import "default";
 @import "include";
+@import "contact_form";
 @import "skills";
 @import "nav";
+@import "custom_pages";
 @import "footer";
 @import "media";
 @import "darcula";
