--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -9,6 +9,7 @@
 @import "variables";
 @import "default";
 @import "include";
+@import "contact_form";
 @import "nav";
 @import "footer";
 @import "media";
