--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,9 @@ layout: default
     {% include article_header.html %}
     {{ page.content }}
     <footer>
+        {% if page.tags %}
         {% include tags.html %}
+        {% endif %}
     </footer>
     {% if page.comments %}
     {% include disqus.html %}
