--- a/_includes/article_header.html
+++ b/_includes/article_header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1 ><a class="h1_link" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h1>
+    <h1><a class="h1_link" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h1>
     <time datetime="{{ page.date | date: '%d %m %Y' }}">
         {{ page.date | date: "%d %B, %Y" }}
     </time>
@@ -7,5 +7,8 @@
     <a class="comment_count" href="{{ site.baseurl }}{{ page.url }}#disqus_thread" data-disqus-identifier="{{ page.id }}"></a>
     <span> | </span>
     {% include tags.html %}
+    {% if page.img %}
+        <img src="{{ site.baseurl }}{{ page.img['source'] }}" alt="{{ page.img['alt'] }}">
+    {% endif %}
 </header>
 
