Apply vertical rhytm

--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -1,5 +1,10 @@
-<article>
-    {% include article_header.html %}
-    <p>{{ page.content | strip_html | truncatewords: site.truncate_size }}<a class="h1_link" href="{{ site.baseurl }}{{ page.url }}">&raquo;</a></p>
-
+<article class="preview">
+    <header>
+        {% include title.html %}
+        {% include post_meta.html %}
+    </header>
+    <p>{{ page.content | strip_html | truncatewords: site.truncate_size | remove: '<p>' | remove: '</p>' }}
+    <a class="link-to-post"
+       href="{{ site.baseurl }}{{ page.url }}">&raquo;</a>
+    </p>
 </article>
