--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -1,4 +1,4 @@
-<form action="https://getsimpleform.com/messages?form_api_token={{ site.contact_PK }}" method="post">
+<form class="contact-form" action="https://getsimpleform.com/messages?form_api_token={{ site.contact_PK }}" method="post">
     <input type='hidden' name='redirect_to' value='{{ site.url }}{{ site.baseurl }}/pages/thankyou.html' />
     <input required="required" id="name" placeholder="* Name" type='text' name='name' />
     <input required="required" id="email" placeholder="* Email" type='email' name='email' />
