--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<blockquote>
+<blockquote id="footer-quote">
     <p>
         {% if page.quote %}
         {{ page.quote["quote"] }}
@@ -16,7 +16,7 @@
     </cite>
     </footer>
 </blockquote>
-<div id="footer_main">
+<div id="footer-main">
     <small>
         &copy; 2016 {{ site.owner }}. ALL RIGHTS RESERVED.
     </small>
