--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,7 +1,7 @@
-
-    <a id="logo" href="{{ site.baseurl }}/index.html">
+<a id="logo" href="{{ site.baseurl }}/index.html">
     <img src="/resources/images/logo.svg" alt="logo">
     <div>
-        <span>DENNIS GRINCH</span>
-        <span>Software Engineer</span>
-    </div></a>
+        <span id="name">DENNIS GRINCH</span>
+        <span id="tag-line">Software Engineer</span>
+    </div>
+</a>
