--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -3,45 +3,81 @@
 /*************************************************************************/
 
 @media only screen and (min-width: $media-query-med-1) {
-  article {
-    padding: 0 $m-p-XL;
+  html {
+    font-size: 110%;
   }
+
+  #wrapper > header {
+    padding: 0 $l-h-baseline;
+  }
+
+  main {
+    padding: $l-h-baseline;
+  }
+
 }
 
 @media only screen and (min-width: $media-query-med-2) {
+  html {
+    font-size: 120%;
+  }
+
+  #wrapper > header {
+    padding: 0 $l-h-baseline * 1.5;
+  }
+
+  main {
+    padding: $l-h-baseline * 2 $l-h-baseline * 1.5;
+  }
 
 }
 
 @media only screen and (min-width: $media-query-max) {
-  body {
-    font-size: 120%;
-
-    #wrapper {
-      > header {
-        #content {
-          div:first-child {
-            flex-direction: row;
-          }
-
-          h1 {
-            margin-top: 18rem;
-            text-align: left;
-          }
-          p {
-            text-align: left;
-          }
-        }
-      }
-    }
+  html {
+    font-size: 130%;
   }
-  #main_nav {
+
+  .punch-line {
+    padding-top: $l-h-baseline * 4;
+  }
+
+  #main-nav {
     ul {
-      text-align: right;
+      text-align: center;
       li {
         display: inline-block;
-        margin-left: $m-p-XL;
+        margin-left: $l-h-baseline;
       }
     }
   }
-
 }
+
+@media only screen and (min-width: $media-query-max-extra) {
+  .logo-nav {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  #main-nav {
+    align-self: center;
+    ul {
+      padding: 0;
+    }
+  }
+
+  .punch-line {
+    padding-top: $l-h-baseline * 8;
+    padding-bottom: $l-h-baseline * 3;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
