--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -24,10 +24,7 @@ video {
 article, aside, details, figcaption, figure, footer, header,
 menu, nav, section {
   display: block;
-}
 
-body {
-  line-height: 1;
 }
 
 ol, ul {
@@ -55,4 +52,8 @@ q {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
 }
