--- a/_sass/_skills.scss
+++ b/_sass/_skills.scss
@@ -2,25 +2,25 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding-bottom: $l-h-baseline;
 
   div {
-    display: block;
+    height: $l-h-baseline * 0.9;
+    width: $l-h-baseline * 12;
+    margin-bottom: $l-h-baseline * 0.42;
     position: relative;
-    height: $m-p-L;
-    width: 20rem;
-    margin-bottom: $m-p-XS;
     p {
+      font-size: $f-s-S;
+      line-height: $l-h-baseline * 0.9;
       height: inherit;
       display: block;
       position: absolute;
       z-index: 1;
-      line-height: 110%;
       width: 100%;
     }
     p span {
-      height: inherit;
       display: inline-block;
-      padding: 0 $m-p-XS;
+      padding: 0 0.4rem;
     }
     p span:first-child {
       background-color: rgba(0, 0, 0, 0.3);
@@ -32,6 +32,9 @@
     }
   }
 
+  div:last-child {
+    margin-bottom: $l-h-baseline * 0.3.2;
+  }
 }
 
 progress[value] {
@@ -51,8 +54,7 @@ progress[value]::-webkit-progress-bar {
 }
 
 progress[value]::-webkit-progress-value {
- @include button-style-webkit(true);
-}
+ @include button-style-webkit(true);}
 
 progress[value]::-moz-progress-bar {
  @include button-style-moz(true);
