--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -90,7 +90,7 @@ h3, #footer-quote{
   font-size: $f-s-1-25M;
 }
 
-#name {
+#logo-name {
   font-size: 1.8rem;
 }
 
@@ -182,6 +182,6 @@ h1, h2, h3 {
   font-weight: normal;
 }
 
-#name {
+#logo-name {
   font-weight: bold;
 }
