--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
     <ul>
         <li><a class="fancy-nav" href="{{ site.baseurl }}/index.html">Home</a></li>
         {% for link in site.categories %}
-        <li><a class="fancy-nav" href="{{ site.baseurl }}/categories/{{ link | first }}">{{ link | first }}</a></li>
+        <li><a class="fancy-nav" href="{{ site.baseurl }}/categories/{{ link | first | downcase }}">{{ link | first }}</a></li>
         {% endfor %}
         <li><a class="fancy-nav" href="{{ site.baseurl }}/pages/about.html">about</a></li>
     </ul>
